force-app/main/default/objects/Car_Inventory_Object__c/Car_Inventory_Object__c.object-meta.xml
<CustomObject>
    <label>Car Inventory Object</label>
    <nameField>
        <label>Car Inventory Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Inventory Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>