force-app/main/default/objects/Car_Inventory_Object__c/fields/Sedan_Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Transmission_Type__c</fullName>
    <description>The type of transmission used in the sedan (e.g., Automatic, 
Manual).</description>
    <label>Sedan Transmission  Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>