force-app/main/default/objects/Car_Inventory_Object__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year of the car (e.g., 2022).</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>