force-app/main/default/objects/Car_Inventory_Object__c/recordTypes/SUV.recordType-meta.xml
<RecordType>
    <fullName>SUV</fullName>
    <active>true</active>
    <label>SUV.</label>
</RecordType>