force-app/main/default/objects/Car_Inventory_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>contains</operation>
        <value>Honda</value>
    </filters>
    <label>All</label>
</ListView>